assets/css/style.css
/* ... */
@media only screen and (min-width: 1060px) and (max-width: 1800px) {
  #content-wrap {
    padding-bottom: 15rem; /* Footer height */
  }
  .join-us-section .section-heading {
    margin-bottom: 100px;
  }
  .join-us {
    flex-direction: row;
  }
  .social-container a p {
    margin-top: 5px;
  }
  .social-container a p {
    margin-right: 5px;
    font-size: 1rem;
  }
  .social-container i {
    font-size: 2rem;
  }
}

@media only screen and (max-width: 768px) {
  .section-heading {
    font-size: 2.5rem;
  }

  .hero-text .fa-heartbeat {
    font-size: 3rem;
  }

  .hero-text h1 {
    font-size: 2.5rem;
  }

  .hero-text h2 {
    font-size: 2rem;
  }

  .hero-text p {
    font-size: 1.5rem;
  }

  .game-bg-lol img {
    width: 150px;
    line-height: 200px;
  }

  .footer-links {
    width: 100%;
    display: block;
  }

  #content-wrap {
    padding-bottom: 33rem; /* Footer height */
  }

  .join-us {
    margin-top: -40px;
  }

  footer {
    height: 25rem;
    display: block;
    text-align: center;
  }

  #pulze-footer {
    flex-direction: column;
  }

  .footer-social h3 {
    margin-top: 15px;
    margin-bottom: 15px;
  }
  .social-links li {
    display: block;
    margin-bottom: 10px;
  }
  .social-links li a {
    color: #fafafa;
    text-decoration: none;
  }
  .social-text {
    display: inline-block !important; /* used to help the User click the social media links on smaller screens */
    margin-right: 6px;
    text-shadow: none;
  }
}

@media only screen and (max-width: 386px) {
  .hero-text {
    margin-top: 50px;
  }
  .cta-hero {
    margin-top: -10px;
  }

  .social-container p {
    font-size: 1.25rem;
  }

  /*------------------------------------------------------Event Page Media queries */

  /*------------------------------------------------------Event Page */
  .game-hero-text h1 {
    font-size: 6rem;
    margin-top: 50px;
  }

  .how-to i {
    font-size: 6rem;
  }

  .how-to p {
    font-size: 2.5rem;
    margin-bottom: 50px;
  }

  a.game-cta-hero {
    font-size: 2.5rem;
    padding: 10px 20px;
  }

  a.game-cta-hero:hover {
    color: var(--header-bg-color);
    background-color: #fafafa;
    animation: pulse-4k 1.8s linear 3;
    text-decoration: none;
  }

  @keyframes pulse-4k {
    0%,
    50%,
    100% {
      padding: 10px 20px;
    }

    20%,
    70% {
      padding: 20px 30px;
    }

    30%,
    90% {
      padding: 8px 19px;
    }
  }
  .geo-heading {
    font-size: 2.5rem;
  }

  .geo {
    font-size: 1.5rem;
  }
}
@media only screen and (min-width: 1024px) and (max-width: 1300px) {
  .tournament {
    width: 200px;
    height: 300px;
    margin: 0px 10px;
  }
  .event-heading {
    font-size: 1.25rem;
  }

  .container-img img {
    height: 75%;
  }

  .card-spacing {
    margin-top: 0px;
  }

  .day {
    width: 150px;
    height: 150px;
  }
}

@media only screen and (min-width: 768px) and (max-width: 1024px) {
  .tournament {
    width: 180px;
    height: 300px;
    margin: 0px 7px;
  }
  .event-heading {
    font-size: 1rem;
  }

  .container-img img {
    height: 75%;
  }

  .card-spacing {
    margin-top: 0px;
  }

  .day {
    width: 120px;
    height: 120px;
  }

  .game-hero-text h1 {
    font-size: 2.5rem;
    margin-top: 50px;
  }

  .how-to i {
    font-size: 2rem;
  }

  .how-to p {
    font-size: 1rem;
  }

  /*------------------------------------------------------About Page  */
  .about-hero h1 {
    font-size: 2.5rem;
  }

  .about-hero-text i {
    font-size: 2rem;
  }

  .about-hero-text p {
    font-size: 1.5rem;
  }
}

@media only screen and (min-width: 576px) and (max-width: 767px) {
  .game-hero-text h1 {
    font-size: 2rem;
    margin-top: 50px;
  }

  .how-to i {
    font-size: 2rem;
  }

  .how-to p {
    font-size: 0.75rem;
    margin-bottom: 10px;
  }

  a.game-cta-hero {
    font-size: 1.25rem;
    padding: 5px 10px;
  }

  .event-table {
    display: block;
  }
  .tournament-card-container {
    justify-content: center;
  }

  .day {
    width: 50%;
    margin: 20px auto;
    height: 50px;
  }

  .tournament {
    width: 150px;
    height: 300px;
    margin-right: 10px;
  }

  .event-heading {
    font-size: 0.75rem;
  }

  .container-img {
    width: 100%;
    height: 20%;
  }
  .container-img img {
    width: 80%;
    height: 75%;
  }

  /*------------------------------------------------------About Page  */
  .about-hero h1 {
    font-size: 2rem;
  }

  .about-hero-text i {
    font-size: 2rem;
  }

  .about-hero-text p {
    font-size: 1.25rem;
  }

  .about-offer {
    margin-bottom: 40px;
    border-top: 2px solid var(--secondary-color);
    border-bottom: 2px solid var(--secondary-color);
    padding: 20px;
  }
  .about-border-bot {
    border-bottom: none;
  }
  .about-border {
    border-bottom: none;
  }
}
/* ... */

